# nba_predictions

./: README.md
wp-engine/: .gitignore  Dockerfile  HANDOFF.md  README.md  docker-compose.yml  pyproject.toml
wp-engine/data/models/: feature_meta.json
wp-engine/docs/: architecture.md
wp-engine/docs/handoffs/: phase-2.md  phase-3.md
wp-engine/frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
wp-engine/frontend/src/: index.css  main.tsx
wp-engine/frontend/src/components/: Sparkline.tsx  StatusBadge.tsx  SwingPlays.tsx  TugBar.tsx  WPChart.tsx
wp-engine/frontend/src/hooks/: socketReducer.test.ts  socketReducer.ts  useGameSocket.ts
wp-engine/reports/: acceptance.md  evaluation.md
wp-engine/scripts/: bootstrap_demo.py  build_fixture_model.py  build_golden.py
wp-engine/src/api/: main.py
wp-engine/src/wp_engine/: __init__.py  collect.py  config.py  features.py  hub.py  inference.py  live.py  monitor.py  poller.py  replay.py  schemas.py  train.py
wp-engine/tests/: conftest.py  test_collect.py  test_config.py  test_features.py  test_features_cli.py  test_game_index.py  test_harvest.py  test_inference.py  test_latency.py  test_live_adapter.py  test_live_fetch.py  test_model.py  test_monitor.py  test_offline_parity.py  test_parse.py  test_parse_season.py  test_poller.py  test_pregame.py  test_schemas.py  test_skew_guard.py  test_splits.py  test_ws.py
wp-engine/tests/e2e/: test_golden.py  test_replay_pipeline.py
wp-engine/tests/fixtures/: game_index.parquet
(+23 files in other folders)
